Ingress Resource.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
spec:
  rules:
  - host: www.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app1-service
            port:
              number: 80
      - path: /2nd
        pathType: Prefix
        backend:
          service:
            name: app2-service
            port:
              number: 80
